# svwb-data-collector

./: .gitignore  AGENTS.md  README.md  newAGENTS.md  pyproject.toml
.github/workflows/: daily-collect.yml  manual-official-cards-sample.yml  manual-official-cards.yml  verify.yml
scripts/: setup.sh
src/svwb_collector/: cli.py  http_client.py  models.py
src/svwb_collector/connectors/: base.py  official_cards.py  rage.py  svoc.py  unofficial.py
src/svwb_collector/reporting/: exporter.py  summary.py
src/svwb_collector/storage/: sqlite_store.py
tests/: test_cli_smoke.py  test_official_card_detail_parser.py  test_official_cards_connector.py  test_official_cards_discovery.py
tests/fixtures/: official_card_detail_3001.html  official_cards_index_discovery.html  official_cards_sample.html
